Fix for border color bug on mobile

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
 
 button {
     border-radius: 40px;
-    border: solid 4px;
+    border: solid black 4px;
     margin: 10px;
 }
 button:hover {
